--- a/Index.html
+++ b/Index.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Password Generator</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <h1>Password generator</h1>
+    <label for="length">Length of the Password</label>
+    <input type="range" name="length" min="0" max="25" step="1">
+    <br>
+    <h2>Include:</h2>
+    <label for="upperCase">A-Z</label>
+    <input name="upperCase" type="radio" value="upperCase" />
+    <label for="lowerCase">a-z</label>
+    <input name="lowerCase" type="radio" value="lowerCase" />
+    <br>
+    <label for="numbers">0-9</label>
+    <input name="numbers" type="radio" value="numbers" />
+    <label for="specialCharacter">Special characters</label>
+    <input name="specialCharacter" type="radio" value="specialCharacter" />
+    <br>
+    <button>Generate Password</button>
+    <br>
+    <input type="text" id="generatedPassword" readonly>
+    <span id="Copy">Copy</span>
+    <span id="Edit">Edit</span>
 </body>
 </html>
