--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Password generator</h1>
     <label for="length">Length of the Password</label>
-    <input type="range" name="length" min="0" max="25" step="1">
+    <input type="range" name="length" id="length" min="0" max="25" step="1">
     <span id="lengthNumber">Number</span>
     <br>
     <h2>Include:</h2>
@@ -31,17 +31,17 @@
     </div>
 
     <div class="include-options checkbox-container">
-        <input name="specialCharacter" type="checkbox" value="specialCharacter">
-        <label class="checkbox-label" for="specialCharacter">
+        <input name="specialCharacters" type="checkbox" value="specialCharacters">
+        <label class="checkbox-label" for="specialCharacters">
             Special characters
         </label>
     </div>
     <br>
-    <button>Generate Password</button>
+    <button id="generator">Generate Password</button>
     <br>
     <input type="text" id="generatedPassword" readonly>
     <span id="Copy">Copy</span>
     <span id="Edit">Edit</span>
-    <script src="./main.js"></script>
+    <script type="module" src="./main.js"></script>
 </body>
 </html>
